--- a/dolphin-web/src/app/app.component.html
+++ b/dolphin-web/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>Reminders</h1>
-<router-outlet></router-outlet>
+<div class="container">
+    <h1>Reminders</h1>
+    <router-outlet></router-outlet>
+</div>
